@@ -4,6 +4,7 @@ DIST gitolite-gentoo-3.5.3.1.tar.bz2 127391 SHA256 0a7025e597f9e50b15bf181c34e78
 DIST gitolite-gentoo-3.6.1.tar.bz2 140554 SHA256 db138b8f616322f0b9c5fb466c579f64e30eb5c1a5029750b64c3846eb2a8db4 SHA512 563f2753f4d04d8a2c5d323fbf3d15f9f12975d4aa3ae3781011b521be7ca2b2ac755f9c4247f86ee303aa7f8c9795f3fdff4504a347b9b9cd08525666bb0187 WHIRLPOOL e8d30287a7420b42b3aa5b96a69bc79cb6b0dd2c9cf61ac3764ac9abcb54a10d19a91dc3509f32d14ed7efc6ede9aa7b9f3c8b01606d549bd38b8393712aae2b
 DIST gitolite-gentoo-3.6.2.1.tar.bz2 143357 SHA256 5304b50e5b2b89990503c59bf1b1e9c8de25f1e8ae6bef24ef8bd2190d5b0007 SHA512 53ae6549a819437d2481249707156eb0f68cccd289bbb40affedd1f7cdda620b974f8e7ee6853c196728cdccf0eb9f8f340a132538dcbf0b653fb69e08d40b9d WHIRLPOOL 7cc1fbe2441a3bd5cfcb092e32f5c2a50d0e85b489853aff3979b0586b2da111a60285516ae3f7d46d68bbe2aa4b82ddcb6d43440d73f8c84494f074f4b2eadf
 DIST gitolite-gentoo-3.6.2.2.tar.bz2 143601 SHA256 bc5841306567a43c63b542cceab7661cfd9b46f4f8b3651fbf14e13ad8a1f0f1 SHA512 431df7002d146d321199ff5ae324177f5b14b1a0ae8e87288ff15a8670eec9e55637d8a6d28d4eac2ff2a54f3f38e3aa700257c5321c73133fcb09037fb384f8 WHIRLPOOL 35abdcfe6b493e808e77f3b7e4c8ab7dc932365db6db73a90788cf9fce6cc130f9c90a4d9d5cbeb79d6f9a35f69141695ac8303dd83da8688852c33e2df7db1d
+DIST gitolite-gentoo-3.6.2.3.tar.bz2 143658 SHA256 cfc0329d930513d99dc6c52bb4ecb1b0486e73ae7f02a81bfd5d57b79ff19966 SHA512 9b8ddaad043d9c7cdbcb027fcbfd36cd09ce2cfaf0b102deee037977461d54942fd7ac019373876f9f4ab04250f78c8565c73494b7b9fc0e42e140d878cc303f WHIRLPOOL 25bc3ab404b00dc1f804777be3609a4db6ac47ad6b27a0fdbb33cca8e35d8ccfc52b44e29d5a0670f9fad3006264bf8056de16d0f67a1586c16abc7eb0fc457b
 EBUILD gitolite-gentoo-2.3.1-r1.ebuild 2009 SHA256 09ef40acc32b005b03fd8412e45cb973c91fa711d2ae04406e9c469fd5b0630c SHA512 9bb6364cf68a4666ae9b4d86f2677b701df1c2570749c52869a7b84baea4b8e1fe6b300344905f4ecbc3b952e2746a3813db64608f1ae91d512cc80c08758984 WHIRLPOOL 21fa2109cbb97e28bbfa64191dea9336fbdbc56f67f05f150554ce796fe01ba75928539d0a3940ab2cc0ca27d70c24f5df3739711931fa80270f685ee118f8b0
 EBUILD gitolite-gentoo-2.3.3-r1.ebuild 2011 SHA256 edd5cb88cb5704b03817d9110921db8dcefb2361a4fc153d1602c339dbf299f0 SHA512 908da7e14fa10b6272bc8599fdfbc3834f91e933233717d24bdc65aea4d5017d0853f59d4058ae44834aebc3f77bebe10654253c00fb63385de6f8ac0a1f1dc4 WHIRLPOOL 813242ff7f3a328c49994d82c59b0cc933b50abe2806e1f0365acdd4ccdb3b34d87c1633debfd9f2a8446ebbaac7c5f9dc24fdc9cd0605dca21626b2836d8835
 EBUILD gitolite-gentoo-3.5.3.1.ebuild 2432 SHA256 fe397a4f27589560c13e1299cf61fc0cc06c98837722777f224ace20ae9851c9 SHA512 75f34ace1f34cb1915dd0635e476baf552f9a7c4e9d2ca002a053b704b3d15a89e2804a100fac5039da844799d12c5b2474b4d7fc9cc32e67d5322d843911fc9 WHIRLPOOL d3d324cf3e66c9523a0c3cfdd1b7e5905e8f3f69a324425b963d9e8a1d2667bf6105ba194387e1e2558dc0c617c459cfba9cbb44106a9258c82769e4462051b2
@@ -11,6 +12,7 @@ EBUILD gitolite-gentoo-3.6.1-r1.ebuild 2899 SHA256 3b1fa72d26d0045d73d440e47a2fc
 EBUILD gitolite-gentoo-3.6.1.ebuild 2430 SHA256 a6f28322722091693b8acbaddccbf6aad3eaff52dbd58d2027a5f4b296af190b SHA512 c254aac0cf0d5413a1b405b7392785c76ea958e354736547538e0a6d2e3ee0869c5ac0134c74aa9a96fab8490bb9719c42b3b4e0df89ce35ac07059173b87a74 WHIRLPOOL 990ea22f10ab0480b93b7ab7c487ca8a159303d4ad8d2046837ca0527311ca94f98a59e4d11885ff1c4b04cff6adb7b7c729712db38e7736c0d6378d438a040d
 EBUILD gitolite-gentoo-3.6.2.1.ebuild 2898 SHA256 79390b296172730fff2b4729b85668ed00044cf630f35bc58e571586ef5e565d SHA512 e8a5fc647601e8b539bc5001e1bfe94418a02f9003aef6204a378fd947ebd178eedbff8d463eb8250a0eadcf4ff629b7269b126afdb4cb760364638a954870e5 WHIRLPOOL 3f957601983b71180326db9df2343620ab89616dc320a7f0cac42f5c138c84517890927a2733be04c7e93db199c33976ef26a2250d68309f660628fe319373d5
 EBUILD gitolite-gentoo-3.6.2.2.ebuild 2898 SHA256 d58db3c1b8290661ed793d2f43c988671fd4032a2031443a1c392978a813d14d SHA512 6be8042878fc99e60171d45db33991b3ba9ff83d6966587f5fc5004db392206c7c3bf5a0745d18b26af730e27816af68b96e658dc6bd9e473598a8db2d057983 WHIRLPOOL 24450d887baed48888a93262d43021fa47f2f0d165edb41ca42e8b5becb48d13cfa837e3379713c888a585a8636b37d1e3b04fedbd1c951002934739f5f76d0a
+EBUILD gitolite-gentoo-3.6.2.3.ebuild 2898 SHA256 8aedc968c8ec6802f39e2818b3234daaa7fd71d304768055681daaea838ea02f SHA512 ac3fa74047c8b14d2490027c37cfd791a85827cc8822394e85eed3cd792ba866df2ef2298dd516fb6e3171dc684cd9a26f012a94986c6283afeffa4d3a5405aa WHIRLPOOL 913db097008df5fb55e285ffce649dece3fc448808a03129437f3ff45f7c947d65aaf20720971f355feb7b91976dc1de13549e924ec8e1cc0183de68e9919c20
 EBUILD gitolite-gentoo-9999.ebuild 2895 SHA256 d6ba5064c868cf8cc4d529524f7205e8e4e970644fb4e7a8cca4c32cb23aa46e SHA512 0467d7322d8343dc350765c80dadfb88d7e7db7f3926867c5c7ac0c7c5e500c490d0242f6b0efabcc199853452e082eefb0324a09626d863faf4606c2f8bf45b WHIRLPOOL bb8939b12441f8dd054ac85f01137455e55f9c1f7e3755c5ce9bd40ae8e59813fd9e7e9de234c3362e99985d80c2e26c10d4dfbdc8f4bb56ce26eda146944eb7
-MISC ChangeLog 7766 SHA256 2a51cbc895096aedcefbb4f16a783e67077bc4e442500f029192e67ef62ddfb4 SHA512 c52cfbd29b0336a490618ef5c267eb38a35b227f2edad27d1527db6da9b780b1fdc17e48a391c5854067eda2a8a373507a7b933f77b7f73165ecef66d6250559 WHIRLPOOL 9715c525da371aacbfcb29d2ffa01c67704b5166b0cdfbae2ce4dc8c4bf3aaecbb78fc7777fceb0bcaf5923aa0d7e1c19f86a04693ec2ba5bdbab6590c004e96
+MISC ChangeLog 7919 SHA256 87c5a0d52d0ccfcf04c0c6060c14a4d294f686f9714bca7379a18802d427a1fe SHA512 75d3549bcd302b574933f4e21338977d3f18a323d86a91fe8d29abe623029c17f383897f9a035600c3bcb432dcdacd439a8fecebd08601e1aa089668f93fddbf WHIRLPOOL 12e2e23494909febbdcaee8ed41b9c1adb17b0cf52f838f735c0561c480e1b11729173adbfc9bc250d38423c0112f0958be7094ed8304ecfd0cafd096c9caab2
 MISC metadata.xml 462 SHA256 4f254ca85d9f1691c416f549328464a3156b5a5524d893b7444891be779d6de8 SHA512 8e35ba2c2682cc77565deb411dfff100423e21774ce4c7f4d5e93b6a0c355c2407413e73409824169160a0d76292758bdf120a289d3f500553932a70101181db WHIRLPOOL 0a78421d60535d27362e62dcc3f4c8b28b6dc8db6d6b8616ec8576bfa964b313dad656ed8849234dd61cff2cffd00d7eb798bb56fdf002dcc1033c02886abf81
