@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst prepare setup test unpack
+DEPEND=dev-lang/perl virtual/perl-File-Path virtual/perl-File-Temp >=dev-vcs/git-1.6.6 dev-lang/perl:=[-build(-)]
+DESCRIPTION=Highly flexible server for git directory version tracker, Gentoo fork
+EAPI=5
+HOMEPAGE=http://git.overlays.gentoo.org/gitweb/?p=proj/gitolite-gentoo.git;a=summary
+IUSE=tools vim-syntax
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-lang/perl virtual/perl-File-Path virtual/perl-File-Temp >=dev-vcs/git-1.6.6 !dev-vcs/gitolite-gentoo vim-syntax? ( app-vim/gitolite-syntax ) dev-perl/Net-SSH-AuthorizedKeysFile dev-perl/JSON dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://gentoo/gitolite-gentoo-3.6.2.3.tar.bz2
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	6b84915e66050718c89bcbc76c144e80	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=01118c4daaf8de96b1544383ed67f620
