@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/gitolite-gentoo
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite-gentoo/ChangeLog,v 1.42 2014/12/28 22:22:11 robbat2 Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite-gentoo/ChangeLog,v 1.43 2015/02/04 00:41:19 robbat2 Exp $
+
+*gitolite-gentoo-3.6.2.3 (04 Feb 2015)
+
+  04 Feb 2015; Robin H. Johnson <robbat2@gentoo.org>
+  +gitolite-gentoo-3.6.2.3.ebuild:
+  Support Ed25519 keys.
 
 *gitolite-gentoo-3.6.2.2 (28 Dec 2014)
 
